--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'Gosha Sans';
+  src: url('/gosha-sans/PPGoshaSans-Regular.otf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
